[package]
name = "vector_search"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vector_search"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.8"
